Made some more initial changes

--- a/client/index.html
+++ b/client/index.html
@@ -18,12 +18,15 @@
   <!-- Angular ui-router files -->
   <script src='index.js'></script>
   <script src='app/landing/landing.js'></script>
+  <script src='app/github/github.js'></script>
   <script src='app/users/users.js'></script>
 
   <!-- Controllers -->
+  <script src='app/github/github.controller.js'></script>
   <script src='app/users/users.controller.js'></script>
 
   <!-- Services -->
+  <script src='components/services/github.services.js'></script>
   <script src='components/services/users.services.js'></script>
 
   <!-- Directives -->
