--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -1,4 +1,5 @@
 <h2>On the landing page</h2>
 
 
-<a ui-sref='githubSubmission'>Go to Submit Page</a>
+<a ui-sref='githubSubmission'>Go to Submit Page</a><br>
+<a ui-sref='users'>Go to Users Page</a>
