--- a/client/index.html
+++ b/client/index.html
@@ -31,5 +31,6 @@
 
   <!-- Directives -->
   <script src='components/directives/createUser.directive.js'></script>
+  <script src='components/directives/submitGithub.directive.js'></script>
 </body>
 </html>
