--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Express App</title>
   <link rel='stylesheet' href='vendor/bootstrap/dist/css/bootstrap.min.css'>
+  <link rel='stylesheet' href='assets/styles/main.css'>
   <script src='vendor/angular/angular.min.js'></script>
 </head>
 <body ng-app='coderRead'>
