--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,7 @@
 
   <!-- Libraries -->
   <script src='vendor/angular-ui-router/release/angular-ui-router.min.js'></script>
+  <script src='vendor/angular-sanitize/angular-sanitize.min.js'></script>
 
   <!--<script src='js/bundle.js'></script>-->
 
