--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Express App</title>
   <link rel='stylesheet' href='vendor/bootstrap/dist/css/bootstrap.min.css'>
+  <link rel='stylesheet' href='vendor/ng-prettyjson/dist/ng-prettyjson.min.css'>
   <link rel='stylesheet' href='assets/styles/main.css'>
   <script src='vendor/angular/angular.min.js'></script>
 </head>
@@ -14,6 +15,7 @@
   <!-- Libraries -->
   <script src='vendor/angular-ui-router/release/angular-ui-router.min.js'></script>
   <script src='vendor/angular-sanitize/angular-sanitize.min.js'></script>
+  <script src='vendor/ng-prettyjson/dist/ng-prettyjson.min.js'></script>
 
   <!--<script src='js/bundle.js'></script>-->
 
