Fix gulp SASS / clearing issue. Couple tiny edits

--- a/client/app/github/github.html
+++ b/client/app/github/github.html
@@ -14,8 +14,8 @@
   <div class='text-center h2 col-xs-12'>
     <a ng-href='{{repo.url}}'>{{repo.name.toUpperCase()}}</a>
   </div>
-  <div class='text-center h4'>
-    ({{github.branchname}})
+  <div class='text-center h5'>
+    ({{repo.branchName}})
   </div>
   <p class='text-center'>{{repo.description}}</p>
   <div class='col-xs-12 col-sm-4 col-sm-offset-2'>
