Added nav icons and their tooltips.

--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -1,3 +1,23 @@
+<nav>
+  <!-- website icon placeholder -->
+  <i id='navLogo' class="navIcon fa fa-code fa-3x"></i>
+  <div class='navIcons'>
+    <!-- the feed -->
+    <i class="navIcon fa fa-signal fa-3x" data-toggle='tooltip' data-placement='bottom' title='Feed'></i>
+    <!-- show recommended posts -->
+    <i class="navIcon fa fa-star fa-3x" data-toggle='tooltip' data-placement='bottom' title='Favs'></i>
+    <!-- search titles of posts -->
+    <i class="navIcon fa fa-search fa-3x" data-toggle='tooltip' data-placement='bottom' title='Search'></i>
+    <!-- create new post -->
+    <i class="navIcon fa fa-plus fa-3x" data-toggle='tooltip' data-placement='bottom' title='New Post'></i>
+    <!-- show posts you've commented on -->
+    <i class="navIcon fa fa-comment fa-3x" data-toggle='tooltip' data-placement='bottom' title="Your Comments"></i>
+    <!-- account -->
+    <i class="navIcon fa fa-cog fa-3x" data-toggle='tooltip' data-placement='bottom' title='Account'></i>
+  </div>
+</nav>
+
+
 <h2>On the landing page</h2>
 
 
