--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,9 @@
   <title>Express App</title>
   <link rel='stylesheet' href='vendor/bootstrap/dist/css/bootstrap.min.css'>
   <link rel='stylesheet' href='vendor/ng-prettyjson/dist/ng-prettyjson.min.css'>
+  <link rel='stylesheet' href='vendor/font-awesome/css/font-awesome.min.css'>
   <link rel='stylesheet' href='assets/styles/main.css'>
+  <script src='vendor/jquery/dist/jquery.min.js'></script>
   <script src='vendor/angular/angular.min.js'></script>
 </head>
 <body ng-app='coderRead'>
@@ -16,6 +18,7 @@
   <script src='vendor/angular-ui-router/release/angular-ui-router.min.js'></script>
   <script src='vendor/angular-sanitize/angular-sanitize.min.js'></script>
   <script src='vendor/ng-prettyjson/dist/ng-prettyjson.min.js'></script>
+  <script src='vendor/bootstrap/dist/js/bootstrap.min.js'></script>
 
   <!--<script src='js/bundle.js'></script>-->
 
@@ -28,6 +31,7 @@
   <!-- Controllers -->
   <script src='app/github/github.controller.js'></script>
   <script src='app/users/users.controller.js'></script>
+  <script src='app/landing/landing.controller.js'></script>
 
   <!-- Services -->
   <script src='components/services/github.services.js'></script>
