--- a/client/app/github/github.html
+++ b/client/app/github/github.html
@@ -11,6 +11,7 @@
 <button github-branch>Get SHA for repo branch</button>
 
 <div ng-if='directoryStructure' class='col-xs-12'>
+  <!-- Title Display -->
   <div class='text-center h2 col-xs-12'>
     <a ng-href='{{repo.url}}'>{{repo.name.toUpperCase()}}</a>
   </div>
@@ -18,6 +19,8 @@
     ({{repo.branchName}})
   </div>
   <p class='text-center'>{{repo.description}}</p>
+
+  <!-- Project Hierarchy Display -->
   <div class='col-xs-12 col-sm-4 col-sm-offset-2'>
     <code id='code'>
       <div class='projectHierarchy' ng-repeat='file in directoryStructure'>
@@ -26,12 +29,15 @@
       </div>
     </code>
   </div>
-  <div class='col-xs-12 col-sm-6 text-center h3' id='repoDescription'>
+
+  <!-- Github profile of author of code -->
+  <div class='col-xs-12 col-sm-6 text-center h3'>
     <img class='roundPic' ng-src='{{repo.userAvatar}}' width='100' height='100'><br>
     <a ng-href='{{repo.userGithubLink}}'>{{repo.username}}</a>
   </div>
 </div>
 
+<!-- Code block -->
 <div ng-if='githubApi' class='col-xs-12 col-md-7'>
   <h2 class='text-center'> {{filepath}} </h2>
   <pre ng-if='!fileIsJson(filepath)'><code>
@@ -41,6 +47,7 @@
   </code></pre>
 </div>
 
+<!-- Discussion Section -->
 <div class='col-xs-12 col-md-5' ng-if='githubApi'>
   <h2 class='text-center'> DISCUSSION SECTION </h2>
 </div>
