Created a bunch of routes, linked nav icons

--- a/client/index.html
+++ b/client/index.html
@@ -27,11 +27,23 @@
   <script src='app/landing/landing.js'></script>
   <script src='app/github/github.js'></script>
   <script src='app/users/users.js'></script>
+  <script src='app/feed/feed.js'></script>
+  <script src='app/account/account.js'></script>
+  <script src='app/favorites/favorites.js'></script>
+  <script src='app/newPost/newPost.js'></script>
+  <script src='app/userComments/userComments.js'></script>
+  <script src='app/search/search.js'></script>
 
   <!-- Controllers -->
   <script src='app/github/github.controller.js'></script>
   <script src='app/users/users.controller.js'></script>
   <script src='app/landing/landing.controller.js'></script>
+  <script src='app/feed/feed.controller.js'></script>
+  <script src='app/account/account.controller.js'></script>
+  <script src='app/favorites/favorites.controller.js'></script>
+  <script src='app/newPost/newPost.controller.js'></script>
+  <script src='app/userComments/userComments.controller.js'></script>
+  <script src='app/search/search.controller.js'></script>
 
   <!-- Services -->
   <script src='components/services/github.services.js'></script>
