Worked on basic routes and nav icons some more

--- a/client/index.html
+++ b/client/index.html
@@ -33,6 +33,7 @@
   <script src='app/newPost/newPost.js'></script>
   <script src='app/userComments/userComments.js'></script>
   <script src='app/search/search.js'></script>
+  <script src='app/nav/nav.js'></script>
 
   <!-- Controllers -->
   <script src='app/github/github.controller.js'></script>
@@ -44,6 +45,7 @@
   <script src='app/newPost/newPost.controller.js'></script>
   <script src='app/userComments/userComments.controller.js'></script>
   <script src='app/search/search.controller.js'></script>
+  <script src='app/nav/nav.controller.js'></script>
 
   <!-- Services -->
   <script src='components/services/github.services.js'></script>
