--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -1,25 +1,6 @@
-<nav>
-  <!-- website icon placeholder -->
-  <i id='navLogo' class="navIcon fa fa-code fa-3x"></i>
-  <div class='navIcons'>
-    <!-- the feed -->
-    <i class="navIcon fa fa-signal fa-3x" data-toggle='tooltip' data-placement='bottom' title='Feed' ui-sref='feed'></i>
-    <!-- show recommended posts -->
-    <i class="navIcon fa fa-star fa-3x" data-toggle='tooltip' data-placement='bottom' title='Favs' ui-sref='favorites'></i>
-    <!-- search titles of posts -->
-    <i class="navIcon fa fa-search fa-3x" data-toggle='tooltip' data-placement='bottom' title='Search' ui-sref='search'></i>
-    <!-- create new post -->
-    <i class="navIcon fa fa-plus fa-3x" data-toggle='tooltip' data-placement='bottom' title='New Post' ui-sref='newPost'></i>
-    <!-- show posts you've commented on -->
-    <i class="navIcon fa fa-comment fa-3x" data-toggle='tooltip' data-placement='bottom' title='Your Comments' ui-sref='userComments'></i>
-    <!-- account -->
-    <i class="navIcon fa fa-cog fa-3x" data-toggle='tooltip' data-placement='bottom' title='Account' ui-sref='account'></i>
-  </div>
-</nav>
-
-
 <h2>On the landing page</h2>
 
 
 <a ui-sref='githubSubmission'>Go to Submit Page</a><br>
-<a ui-sref='users'>Go to Users Page</a>
+<a ui-sref='users'>Go to Users Page</a><br>
+<a ui-sref='app.feed'>Go into app</a>
