--- a/client/index.html
+++ b/client/index.html
@@ -19,6 +19,7 @@
   <script src='vendor/angular-sanitize/angular-sanitize.min.js'></script>
   <script src='vendor/ng-prettyjson/dist/ng-prettyjson.min.js'></script>
   <script src='vendor/bootstrap/dist/js/bootstrap.min.js'></script>
+  <script src='vendor/satellizer/satellizer.min.js'></script>
 
   <!--<script src='js/bundle.js'></script>-->
 
