Did lots of client-side authentication stuff. Started making the user service. Saved user to localStorage upon login. Check for localStorage user on website load, if there put user in user service. Implemented logout. Made certain nav icons only appear when logged in. Deleted users page. Restricted access to front end pages only viewable after login. Still got some more authentication stuff to do.

--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,7 @@
   <script src='vendor/ng-prettyjson/dist/ng-prettyjson.min.js'></script>
   <script src='vendor/bootstrap/dist/js/bootstrap.min.js'></script>
   <script src='vendor/satellizer/satellizer.min.js'></script>
+  <script src='vendor/angular-jwt/dist/angular-jwt.min.js'></script>
 
   <!--<script src='js/bundle.js'></script>-->
 
@@ -27,7 +28,6 @@
   <script src='index.js'></script>
   <script src='app/landing/landing.js'></script>
   <script src='app/github/github.js'></script>
-  <script src='app/users/users.js'></script>
   <script src='app/feed/feed.js'></script>
   <script src='app/account/account.js'></script>
   <script src='app/favorites/favorites.js'></script>
@@ -38,7 +38,6 @@
 
   <!-- Controllers -->
   <script src='app/github/github.controller.js'></script>
-  <script src='app/users/users.controller.js'></script>
   <script src='app/landing/landing.controller.js'></script>
   <script src='app/feed/feed.controller.js'></script>
   <script src='app/account/account.controller.js'></script>
@@ -53,7 +52,7 @@
   <script src='components/services/users.services.js'></script>
 
   <!-- Directives -->
-  <script src='components/directives/createUser.directive.js'></script>
+  <script src='components/directives/user.directive.js'></script>
   <script src='components/directives/submitGithub.directive.js'></script>
 </body>
 </html>
