--- a/client/app/nav/nav.html
+++ b/client/app/nav/nav.html
@@ -5,19 +5,18 @@
     <!-- the feed -->
     <i class="navIcon fa fa-signal fa-3x" data-toggle='tooltip' data-placement='bottom' title='Feed' ui-sref='app.feed'></i>
     <!-- show recommended posts -->
-    <i class="navIcon fa fa-star fa-3x" data-toggle='tooltip' data-placement='bottom' title='Favs' ui-sref='app.favorites' ng-show='loggedIn'></i>
+    <i class="navIcon fa fa-star fa-3x" data-toggle='tooltip' data-placement='bottom' title='Favs' ui-sref='app.favorites' ng-show='isLoggedIn()'></i>
     <!-- search titles of posts -->
     <i class="navIcon fa fa-search fa-3x" data-toggle='tooltip' data-placement='bottom' title='Search' ui-sref='app.search'></i>
     <!-- create new post -->
-    <i class="navIcon fa fa-plus fa-3x" data-toggle='tooltip' data-placement='bottom' title='New Post' ui-sref='app.newPost' ng-show='loggedIn'></i>
+    <i class="navIcon fa fa-plus fa-3x" data-toggle='tooltip' data-placement='bottom' title='New Post' ui-sref='app.newPost' ng-show='isLoggedIn()'></i>
     <!-- show posts you've commented on -->
-    <i class="navIcon fa fa-comment fa-3x" data-toggle='tooltip' data-placement='bottom' title='Your Comments' ui-sref='app.userComments' ng-show='loggedIn'></i>
+    <i class="navIcon fa fa-comment fa-3x" data-toggle='tooltip' data-placement='bottom' title='Your Comments' ui-sref='app.userComments' ng-show='isLoggedIn()'></i>
     <!-- account -->
-    <i class="navIcon fa fa-cog fa-3x" data-toggle='tooltip' data-placement='bottom' title='Account' ui-sref='app.account' ng-show='loggedIn'></i>
-    <!-- login -->
-    <i class="navIcon fa fa-sign-in fa-3x" data-toggle='tooltip' data-placement='bottom' title='Login with Github' ng-click='authenticate("github")' ng-show='!loggedIn'></i>
+    <i logout-user class="navIcon fa fa-cog fa-3x" data-toggle='tooltip' data-placement='bottom' title='Account' ui-sref='app.account' ng-show='isLoggedIn()'></i>
+    <!-- login/signup -->
+    <i github-login class="navIcon fa fa-sign-in fa-3x" data-toggle='tooltip' data-placement='bottom' title='Login with Github' ng-show='!isLoggedIn()'></i>
   </div>
-  <p ng-click='unLinkGithub()'>Unlink From Github</p>
 </nav>
 
 <div ui-view></div>
