--- a/client/index.html
+++ b/client/index.html
@@ -21,6 +21,7 @@
   <script src='vendor/bootstrap/dist/js/bootstrap.min.js'></script>
   <script src='vendor/satellizer/satellizer.min.js'></script>
   <script src='vendor/angular-jwt/dist/angular-jwt.min.js'></script>
+  <script src='vendor/angular-resource/angular-resource.min.js'></script>
 
   <!--<script src='js/bundle.js'></script>-->
 
