Did a few things. Added search UI element to search view. Made a directive for clicking on the main part of the screen or any of the nav buttons closes the side menu when its open. Deleted Account state. Couple other things too.

--- a/client/index.html
+++ b/client/index.html
@@ -30,7 +30,7 @@
   <script src='app/landing/landing.js'></script>
   <script src='app/github/github.js'></script>
   <script src='app/feed/feed.js'></script>
-  <script src='app/account/account.js'></script>
+  <script src='app/profile/profile.js'></script>
   <script src='app/favorites/favorites.js'></script>
   <script src='app/newPost/newPost.js'></script>
   <script src='app/userComments/userComments.js'></script>
@@ -41,7 +41,7 @@
   <script src='app/github/github.controller.js'></script>
   <script src='app/landing/landing.controller.js'></script>
   <script src='app/feed/feed.controller.js'></script>
-  <script src='app/account/account.controller.js'></script>
+  <script src='app/profile/profile.controller.js'></script>
   <script src='app/favorites/favorites.controller.js'></script>
   <script src='app/newPost/newPost.controller.js'></script>
   <script src='app/userComments/userComments.controller.js'></script>
