--- a/client/app/nav/nav.html
+++ b/client/app/nav/nav.html
@@ -2,37 +2,38 @@
     <div id='site-canvas'>
       <div id='site-menu'>
         <ul class='list-group blackBack'>
-          <li class='list-group-item whiteOnBlack'> Profile </li>
-          <li class='list-group-item whiteOnBlack'> FAQ </li>
-          <li class='list-group-item whiteOnBlack'> Account </li>
+          <li class='list-group-item whiteOnBlack' ui-sref='app.profile'> Profile </li>
+          <li class='list-group-item whiteOnBlack' ui-sref='app.faq'> FAQ </li>
           <li logout-user class='list-group-item whiteOnBlack'> Logout </li>
         </ul>
       </div>
 
-<nav class='sideMenu'>
+<nav>
   <!-- website icon placeholder -->
   <i id='navLogo' class="navIcon fa fa-code fa-3x" ui-sref='app.landing'></i>
   <div class='navIcons'>
     <!-- the feed -->
-    <i class="navIcon fa fa-signal fa-3x" data-toggle='tooltip' data-placement='bottom' title='Feed' ui-sref='app.feed'></i>
+    <i click-close class="navIcon fa fa-signal fa-3x" data-toggle='tooltip' data-placement='bottom' title='Feed' ui-sref='app.feed'></i>
     <!-- show recommended posts -->
-    <i class="navIcon fa fa-star fa-3x" data-toggle='tooltip' data-placement='bottom' title='Favs' ui-sref='app.favorites' ng-show='isLoggedIn()'></i>
+    <i click-close class="navIcon fa fa-star fa-3x" data-toggle='tooltip' data-placement='bottom' title='Favs' ui-sref='app.favorites' ng-show='isLoggedIn()'></i>
     <!-- search titles of posts -->
-    <i class="navIcon fa fa-search fa-3x" data-toggle='tooltip' data-placement='bottom' title='Search' ui-sref='app.search'></i>
+    <i click-close class="navIcon fa fa-search fa-3x" data-toggle='tooltip' data-placement='bottom' title='Search' ui-sref='app.search'></i>
     <!-- create new post -->
-    <i class="navIcon fa fa-plus fa-3x" data-toggle='tooltip' data-placement='bottom' title='New Post' ui-sref='app.newPost' ng-show='isLoggedIn()'></i>
+    <i click-close class="navIcon fa fa-plus fa-3x" data-toggle='tooltip' data-placement='bottom' title='New Post' ui-sref='app.newPost' ng-show='isLoggedIn()'></i>
     <!-- show posts you've commented on -->
-    <i class="navIcon fa fa-comment fa-3x" data-toggle='tooltip' data-placement='bottom' title='Your Comments' ui-sref='app.userComments' ng-show='isLoggedIn()'></i>
-    <!-- account -->
-    <i  class="navIcon fa fa-cog fa-3x toggle-nav" data-toggle='tooltip' data-placement='bottom' title='Account' ui-sref='app.account' ng-show='isLoggedIn()'></i>
+    <i click-close class="navIcon fa fa-comment fa-3x" data-toggle='tooltip' data-placement='bottom' title='Your Comments' ui-sref='app.userComments' ng-show='isLoggedIn()'></i>
+    <!-- FAQ -->
+    <i class="navIcon fa fa-question fa-3x" data-toggle='tooltip' data-placement='bottom' title='What is CoderRead?' ui-sref='app.faq' ng-show='!isLoggedIn()'></i>
+    <!-- Side Menu -->
+    <i id='sidemenu' class="navIcon fa fa-cog fa-3x toggle-nav" data-toggle='tooltip' data-placement='bottom' title='Menu' ng-show='isLoggedIn()'></i>
     <!-- login/signup -->
     <i github-login class="navIcon fa fa-sign-in fa-3x" data-toggle='tooltip' data-placement='bottom' title='Login with Github' ng-show='!isLoggedIn()'></i>
   </div>
 </nav>
-
+<!-- <div click-close> -->
 <a ui-sref='githubSubmission'>Go to Submit Page</a><br>
 
-<div ui-view class='sideMenu'></div>
-
+<div id='content' click-close ui-view></div>
+<!-- </div> -->
 </div>
 </div>
