--- a/client/app/search/search.html
+++ b/client/app/search/search.html
@@ -1,3 +1,3 @@
-<div class='col-md-8 col-md-offset-2'>
-  <input id='bigSearch' type='search' ng-model='search.text' placeholder='Search'>
+<div class='col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3'>
+  <input id='bigSearch' type='search' ng-model='search.text' placeholder='Search' autofocus>
 </div>
