Made faq, profile pages. Also moved the side menu directive to its own file.

--- a/client/index.html
+++ b/client/index.html
@@ -36,6 +36,7 @@
   <script src='app/userComments/userComments.js'></script>
   <script src='app/search/search.js'></script>
   <script src='app/nav/nav.js'></script>
+  <script src='app/faq/faq.js'></script>
 
   <!-- Controllers -->
   <script src='app/github/github.controller.js'></script>
@@ -47,6 +48,7 @@
   <script src='app/userComments/userComments.controller.js'></script>
   <script src='app/search/search.controller.js'></script>
   <script src='app/nav/nav.controller.js'></script>
+  <script src='app/faq/faq.controller.js'></script>
 
   <!-- Services -->
   <script src='components/services/github.services.js'></script>
@@ -55,5 +57,6 @@
   <!-- Directives -->
   <script src='components/directives/user.directive.js'></script>
   <script src='components/directives/submitGithub.directive.js'></script>
+  <script src='components/directives/sideMenu.directive.js'></script>
 </body>
 </html>
